# rust_canvas_perf_wat

./: .gitignore  Cargo.toml  README.md
html/: index.html
pkg/: README.md  package.json  rustcanvasfps.d.ts  rustcanvasfps.js  rustcanvasfps_bg.wasm  rustcanvasfps_bg.wasm.d.ts
src/: main.rs
