[package]
name = "rustcanvasfps"
version = "0.1.0"
edition = "2018"

[target.'cfg(target_arch = "wasm32")'.dependencies]
futures = "*"
wasm-bindgen = { version = "0.2", features = [] }
# these two are necessary for async in wasm in browser
wasm-bindgen-futures = "0.4.*"
js-sys = "0.3.*"

# No support for target-specific lib and none is coming any time soon either: https://github.com/rust-lang/cargo/issues/4881
[lib]
# Error: crate-type must be cdylib to compile to wasm32-unknown-unknown. Add the following to your Cargo.toml file:
# meh?
crate-type = ["cdylib", "rlib"]
path = "src/main.rs"

[dependencies.web-sys]
version = "0.3.4"
features = [
    'console',
    'CanvasPattern',
    'CanvasRenderingContext2d',
    'CssStyleDeclaration',
    'DomRect', # for get_bounding_client_rect
    'Document',
    'Element',
    'EventTarget',
    'HtmlCanvasElement',
    'HtmlElement',
    'HtmlImageElement',
    'HtmlInputElement',
    'HtmlLabelElement',
    'HtmlOptionElement',
    'HtmlSelectElement',
    'HtmlTextAreaElement',
    'MouseEvent',
    'Node',
    'Performance',
    'Storage', # local_storage
    'Touch', # touchevent.touches.get
    'TouchEvent',
    'TouchList', # touchevent.touches
    'Window',
]
